--- a/conf/openbroadcast.ch.supervised.conf
+++ b/conf/openbroadcast.ch.supervised.conf
@@ -1,8 +1,7 @@
 [program:openbroadcast.ch]
-directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/gunicorn_django -c /var/www/openbroadcast.ch/src/conf/openbroadcast.ch.gunicorn.conf /var/www/openbroadcast.ch/src/website/settings.py
+command=/srv/openbroadcast.ch/bin/gunicorn_django -t 1200 settings.py
+directory=/var/www/openbroadcast.ch/src/website
+environment=PYTHONPATH='/var/www/openbroadcast.ch/src/website'
 user=root
 autostart=true
 autorestart=true
-redirect_stderr=True
-environment=HOME='/var/www/openbroadcast.ch/src/website/'
