--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -6,6 +6,7 @@ gunicorn==0.13.4 # important! newer version does not work
 django-jenkins==0.12.1
 pyflakes==0.5.0
 pep8==1.0.1
+pylint>=0.2
 
 # caching
 python-memcached>=1.48
