migration fixes & testing

--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -37,8 +37,11 @@ django-avatar
 
 # tagging - TODO: decide what app to use
 #django-taggit==0.9.3
-#django-tagging==0.3.1
-django-tagging-ng==0.3.3
+django-tagging==0.3.1
+#django-tagging-ng==0.3.3
+
+
+URLObject
 
 django-countries==1.2
 
