--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//services/bcmon/bcmon_notify.py=utf-8
 encoding//website/__filer/admin/__init__.py=utf-8
 encoding//website/__filer/models/__init__.py=utf-8
 encoding//website/__filer/views.py=utf-8
