--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -22,6 +22,9 @@ django-debug-toolbar>=0.8.4
 celery>=2.5.3,<3.0.0
 django-celery==2.5.5
 
+# api
+django-tastypie==0.1.3
+
 
 # core modules
 django==1.4.1
