added hypo and fixed bcmon

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//services/bcmon/bcmon_notify.py=utf-8
+encoding//services/pypo/pypo_cli.py=utf-8
 encoding//website/__filer/admin/__init__.py=utf-8
 encoding//website/__filer/models/__init__.py=utf-8
 encoding//website/__filer/views.py=utf-8
