--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -23,7 +23,8 @@ celery>=2.5.3,<3.0.0
 django-celery==2.5.5
 
 # api
-django-tastypie==0.1.3
+# django-tastypie==0.1.3
+django-tastypie-with-file-upload-and-model-form-validation
 
 
 # core modules
