--- a/conf/openbroadcast.ch.nginx.conf
+++ b/conf/openbroadcast.ch.nginx.conf
@@ -17,11 +17,12 @@ server {
     proxy_set_header   X-Real-IP        $remote_addr;
     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-    proxy_cache webcache;
-    proxy_cache_key $scheme$host$request_uri;
-    proxy_cache_valid  200 301 302 304 120m;
-    proxy_cache_valid  any 1m;
-
+    #proxy_cache webcache;
+    #proxy_cache_key $scheme$host$request_uri;
+    #proxy_cache_valid  200 301 302 304 120m;
+    #proxy_cache_valid  any 1m;
+    
+    client_max_body_size 1024M;
 
     location /static  {
         autoindex  off;
