--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -46,6 +46,8 @@ django-guardian==1.0.4
 django-classy-tags>=0.3.4.1
 django-avatar
 
+django-admin-tools
+
 # tagging - TODO: decide what app to use
 #django-taggit==0.9.3
 django-tagging==0.3.1
