added channel plugin

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,6 +12,7 @@ encoding//website/apps/alibrary/models/__init__.py=utf-8
 encoding//website/apps/alibrary/templatetags/alibrary_tags.py=utf-8
 encoding//website/apps/ashop/templatetags/ashop_tags.py=utf-8
 encoding//website/apps/asite/templatetags/asite_tags.py=utf-8
+encoding//website/apps/bcmon/models.py=utf-8
 encoding//website/cms/admin/pageadmin.py=utf-8
 encoding//website/crispy_forms/templatetags/crispy_forms_tags.py=utf-8
 encoding//website/filer/__init__.py=utf-8
