--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -95,7 +95,7 @@ cmsplugin-pagedown
 # python libs
 PIL>=1.1.7
 #MySQL-python>=1.2.3
-psycopg2==2.4.5
+#psycopg2==2.4.5
 South>=0.7.3
 BeautifulSoup>=3.2.0
 
