sip - addin fingerprinting etc

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,16 +13,31 @@ encoding//website/apps/alibrary/templatetags/alibrary_tags.py=utf-8
 encoding//website/apps/ashop/templatetags/ashop_tags.py=utf-8
 encoding//website/apps/asite/templatetags/asite_tags.py=utf-8
 encoding//website/apps/bcmon/models.py=utf-8
+encoding//website/apps/echoprint/API/api.py=utf-8
+encoding//website/apps/echoprint/API/fp.py=utf-8
 encoding//website/cms/admin/pageadmin.py=utf-8
 encoding//website/crispy_forms/templatetags/crispy_forms_tags.py=utf-8
 encoding//website/filer/__init__.py=utf-8
 encoding//website/filer/admin/__init__.py=utf-8
+encoding//website/filer/admin/audioadmin.py=utf-8
+encoding//website/filer/admin/clipboardadmin.py=utf-8
+encoding//website/filer/admin/fileadmin.py=utf-8
+encoding//website/filer/admin/folderadmin.py=utf-8
+encoding//website/filer/admin/imageadmin.py=utf-8
+encoding//website/filer/admin/permissions.py=utf-8
+encoding//website/filer/fields/file.py=utf-8
 encoding//website/filer/models/__init__.py=utf-8
+encoding//website/filer/models/audiomodels.py=utf-8
 encoding//website/filer/models/filemodels.py=utf-8
+encoding//website/filer/models/imagemodels.py=utf-8
+encoding//website/filer/models/orig_audiomodels.py=utf-8
 encoding//website/filer/models/tools.py=utf-8
+encoding//website/filer/models/virtualitems.py=utf-8
 encoding//website/filer/server/main_server_urls.py=utf-8
 encoding//website/filer/server/urls.py=utf-8
 encoding//website/filer/settings.py=utf-8
+encoding//website/filer/storage.py=utf-8
+encoding//website/filer/views.py=utf-8
 encoding//website/obp_legacy/management/commands/migrate_legacy.py=utf-8
 encoding//website/obp_legacy/management/commands/migrate_test.py=utf-8
 encoding//website/settings.py=utf-8
