--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -16,6 +16,7 @@ encoding//website/apps/asite/templatetags/asite_tags.py=utf-8
 encoding//website/apps/bcmon/models.py=utf-8
 encoding//website/apps/ep/API/api.py=utf-8
 encoding//website/apps/ep/API/fp.py=utf-8
+encoding//website/apps/importer/models.py=utf-8
 encoding//website/cms/admin/pageadmin.py=utf-8
 encoding//website/crispy_forms/templatetags/crispy_forms_tags.py=utf-8
 encoding//website/filer/__init__.py=utf-8
