--- a/conf/openbroadcast.ch.nginx.conf
+++ b/conf/openbroadcast.ch.nginx.conf
@@ -9,7 +9,7 @@ upstream openbroadcast_ch {
 # server
 server {
     listen   80;
-    server_name openbroadcast.ch openbroadcast.ch.node05.daj.anorg.net;
+    server_name openbroadcast.ch openbroadcast.ch.node05.daj.anorg.net dev.openbroadcast.ch;
 
 
     proxy_redirect     off;
