--- a/conf/openbroadcast.ch.supervised.conf
+++ b/conf/openbroadcast.ch.supervised.conf
@@ -1,7 +1,6 @@
 [program:openbroadcast.ch]
-command=/srv/openbroadcast.ch/bin/gunicorn_django -t 1200 settings.py
 directory=/var/www/openbroadcast.ch/src/website
-environment=PYTHONPATH='/var/www/openbroadcast.ch/src/website'
+command=/srv/openbroadcast.ch/bin/python /srv/openbroadcast.ch/bin/gunicorn_django -t 1200 -c /var/www/openbroadcast.ch/src/conf/openbroadcast.ch.gunicorn.conf
 user=root
 autostart=true
 autorestart=true
