--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -44,4 +44,5 @@ encoding//website/filer/views.py=utf-8
 encoding//website/obp_legacy/management/commands/migrate_legacy.py=utf-8
 encoding//website/obp_legacy/management/commands/migrate_test.py=utf-8
 encoding//website/settings.py=utf-8
+encoding//website/shop/shop/shop_api.py=utf-8
 encoding//website/shop/shop/templatetags/shop_tags.py=utf-8
