temp include css

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ website/media
 website/temp
 website/logs
 website/static
-website/site-static/css/*
+#website/site-static/css/*
 website/site-static/.sass-cache
 website/data.db
 website/static/CACHE
