--- a/conf/worker.openbroadcast.ch.supervised.conf
+++ b/conf/worker.openbroadcast.ch.supervised.conf
@@ -1,7 +1,6 @@
 [program:worker.openbroadcast.ch]
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/gunicorn_django -c /var/www/openbroadcast.ch/src/conf/openbroadcast.ch.gunicorn.conf /var/www/openbroadcast.ch/src/website/settings.py
-command=runinenv /srv/openbroadcast.ch /var/www/openbroadcast.ch/src/website/manage.py celeryd
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 1
 user=root
 autostart=true
 autorestart=true
