--- a/conf/echoprint.openbroadcast.ch.supervised.conf
+++ b/conf/echoprint.openbroadcast.ch.supervised.conf
@@ -1,6 +1,6 @@
 [program:echoprint.openbroadcast.ch]
 directory=/var/www/echoprint.openbroadcast.ch/solr/solr/
-command=java -Dsolr.solr.home=/var/www/echoprint.openbroadcast.ch/solr/solr/ -Djava.awt.headless=true -jar start.jar
+command=java -Dsolr.solr.home=/var/www/echoprint.openbroadcast.ch/solr/solr/solr -Djava.awt.headless=true -jar start.jar
 user=root
 autostart=true
 autorestart=true
