--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//services/pypo/pypo_cli.py=utf-8
 encoding//website/__filer/admin/__init__.py=utf-8
 encoding//website/__filer/models/__init__.py=utf-8
 encoding//website/__filer/views.py=utf-8
+encoding//website/apps/abcast/management/commands/push_dummy_media.py=utf-8
 encoding//website/apps/abcast/models.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_folder.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_folder_meta.py=utf-8
