api changes, exporter, etc.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//services/pypo/pypo_cli.py=utf-8
 encoding//website/__filer/admin/__init__.py=utf-8
 encoding//website/__filer/models/__init__.py=utf-8
 encoding//website/__filer/views.py=utf-8
+encoding//website/apps/__importer/models.py=utf-8
 encoding//website/apps/abcast/management/commands/push_dummy_media.py=utf-8
 encoding//website/apps/abcast/models.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_folder.py=utf-8
@@ -44,6 +45,7 @@ encoding//website/filer/server/urls.py=utf-8
 encoding//website/filer/settings.py=utf-8
 encoding//website/filer/storage.py=utf-8
 encoding//website/filer/views.py=utf-8
+encoding//website/lib/util/encrypt.py=utf-8
 encoding//website/obp_legacy/management/commands/migrate_legacy.py=utf-8
 encoding//website/obp_legacy/management/commands/migrate_test.py=utf-8
 encoding//website/settings.py=utf-8
