--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -17,6 +17,8 @@ python-varnish>=0.2.1
 akismet
 redis
 
+
+
 # development
 django-extensions>=0.9
 Werkzeug
@@ -51,6 +53,10 @@ django-email-confirmation==0.2
 django-guardian==1.0.4
 django-classy-tags>=0.3.4.1
 django-avatar
+
+# encryption
+pycrypto
+django-crypto
 
 django-activity-stream==0.4.4
 
