modularized views and playlist editing!

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,6 +13,7 @@ encoding//website/apps/alibrary/management/commands/import_folder_meta.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_testing.py=utf-8
 encoding//website/apps/alibrary/management/commands/process_media.py=utf-8
 encoding//website/apps/alibrary/management/commands/reset_cache.py=utf-8
+encoding//website/apps/alibrary/migrations/0059_add_perm_edit_playlist.py=utf-8
 encoding//website/apps/alibrary/models/__init__.py=utf-8
 encoding//website/apps/alibrary/templatetags/alibrary_tags.py=utf-8
 encoding//website/apps/ashop/templatetags/ashop_tags.py=utf-8
@@ -23,6 +24,9 @@ encoding//website/apps/ep/API/fp.py=utf-8
 encoding//website/apps/exporter/models.py=utf-8
 encoding//website/apps/importer/models.py=utf-8
 encoding//website/cms/admin/pageadmin.py=utf-8
+encoding//website/cms/conf/__init__.py=utf-8
+encoding//website/cms/conf/global_settings.py=utf-8
+encoding//website/cms/conf/patch.py=utf-8
 encoding//website/crispy_forms/templatetags/crispy_forms_tags.py=utf-8
 encoding//website/filer/__init__.py=utf-8
 encoding//website/filer/admin/__init__.py=utf-8
@@ -51,3 +55,4 @@ encoding//website/obp_legacy/management/commands/migrate_test.py=utf-8
 encoding//website/settings.py=utf-8
 encoding//website/shop/shop/shop_api.py=utf-8
 encoding//website/shop/shop/templatetags/shop_tags.py=utf-8
+encoding//website/shop/shop_simplenotifications/__init__.py=utf-8
