--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,7 @@ encoding//website/__filer/views.py=utf-8
 encoding//website/apps/__importer/models.py=utf-8
 encoding//website/apps/abcast/management/commands/push_dummy_media.py=utf-8
 encoding//website/apps/abcast/models.py=utf-8
+encoding//website/apps/alibrary/management/commands/fix_media.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_folder.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_folder_meta.py=utf-8
 encoding//website/apps/alibrary/management/commands/import_testing.py=utf-8
