--- a/conf/socketio.openbroadcast.ch.supervised.conf
+++ b/conf/socketio.openbroadcast.ch.supervised.conf
@@ -1,6 +1,6 @@
 [program:socketio.openbroadcast.ch]
 directory=/var/www/openbroadcast.ch/src/services/socketio
-command=node /var/www/openbroadcast.ch/src/services/socketio/gateway.js
+command=/usr/local/bin/node /var/www/openbroadcast.ch/src/services/socketio/gateway.js
 user=root
 autostart=true
 autorestart=true
