importer templates refactored to nunjucks

--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -55,6 +55,8 @@ django-guardian==1.0.4
 django-classy-tags>=0.3.4.1
 django-avatar
 
+django-admin-shortcuts==1.2.5
+
 # encryption
 pycrypto
 django-crypto
