--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -74,7 +74,7 @@ django-tagging==0.3.1
 
 -e git+git://github.com/mvpdev/django-eav.git#egg=django-eav
 
--e git+https://github.com/bfirsh/python-echoprint.git#egg=echoprint
+#-e git+https://github.com/bfirsh/python-echoprint.git#egg=echoprint
 
 # api clients
 discogs-client==1.1.1
