--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -77,7 +77,7 @@ django-tagging==0.3.1
 #-e git+https://github.com/bfirsh/python-echoprint.git#egg=echoprint
 
 # custom modules
--e hit+https://github.com:ohrstrom/django-pushy.git#egg=django-pushy
+-e git+https://github.com/ohrstrom/django-pushy.git#egg=django-pushy
 
 # api clients
 discogs-client==1.1.1
