initial migrator for legacy_data added

--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -60,6 +60,7 @@ django-avatar
 django-common>=0.1.51
 
 django-social-auth>=0.7.23
+dropbox
 
 django-admin-shortcuts==1.2.5
 
@@ -109,6 +110,7 @@ URLObject
 django-countries==1.2
 
 # blog
+-e git+git://github.com/newvem/pytz.git#egg=pytz
 cmsplugin_zinnia
 -e git+git://github.com/hzlf/django-blog-zinnia.git@v0.12.3#egg=django-zinnia
 
