--- a/conf/openbroadcast.ch.nginx.conf
+++ b/conf/openbroadcast.ch.nginx.conf
@@ -21,6 +21,10 @@ server {
     #proxy_cache_key $scheme$host$request_uri;
     #proxy_cache_valid  200 301 302 304 120m;
     #proxy_cache_valid  any 1m;
+
+    error_log /var/log/nginx/openbroadcast.ch-error.log debug;
+    access_log /var/log/nginx/openbroadcast.ch-access.log;
+    sendfile        on;
     
     client_max_body_size 1024M;
 
@@ -29,6 +33,14 @@ server {
         root /var/www/openbroadcast.ch/src/website/;
 		expires 30d;add_header Pragma public;
     	add_header Cache-Control "public";
+    }
+
+    # lock access to private files
+    # handled via 'X-Accel-Redirect'
+    # make sure this corresponds with local_settings.py
+    location /media/private {
+        internal;
+        root /var/www/openbroadcast.ch/src/website/;
     }
 
     location /media  {
