prototype for changed playlist/basket handling

--- a/conf/worker.convert.openbroadcast.ch.supervised.conf
+++ b/conf/worker.convert.openbroadcast.ch.supervised.conf
@@ -1,6 +1,6 @@
-[program:worker.celery.openbroadcast.ch]
+[program:worker.convert.openbroadcast.ch]
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd --autoscale=10,1 -Q celery
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd --autoscale=10,1 -Q convert
 user=root
 autostart=true
 autorestart=true
