--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -138,6 +138,7 @@ cmsplugin-pagedown
 
 # rest / API
 # djangorestframework>=0.3.3 # in app code
+django-oauth2-provider==0.2.6
 
 # python libs
 PIL>=1.1.7
