--- a/conf/openbroadcast.ch.nginx.conf
+++ b/conf/openbroadcast.ch.nginx.conf
@@ -22,6 +22,14 @@ server {
     #proxy_cache_valid  200 301 302 304 120m;
     #proxy_cache_valid  any 1m;
 
+    gzip              on;
+    gzip_buffers      16 8k;
+    gzip_comp_level   4;
+    gzip_http_version 1.0;
+    gzip_min_length   1280;
+    gzip_types        text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/bmp;
+    gzip_vary         on;
+
     error_log /var/log/nginx/openbroadcast.ch-error.log debug;
     access_log /var/log/nginx/openbroadcast.ch-access.log;
     sendfile        on;
