--- a/conf/openbroadcast.ch.gunicorn.conf
+++ b/conf/openbroadcast.ch.gunicorn.conf
@@ -6,5 +6,5 @@ daemon = False
 debug = False
 # 1 worker needs approx. 40MB of ram
 workers = 4
-logfile = "/tmp/openbroadcast.ch.log"
+logfile = "/var/log/supervisord/gunicorn.openbroadcast.log"
 loglevel = "info"
