--- a/conf/openbroadcast.ch.supervised.conf
+++ b/conf/openbroadcast.ch.supervised.conf
@@ -4,3 +4,6 @@ command=/srv/openbroadcast.ch/bin/python /srv/openbroadcast.ch/bin/gunicorn_djan
 user=root
 autostart=true
 autorestart=true
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=5
+stdout_logfile=/var/log/supervisord/openbroadcast.ch
