--- a/conf/redis.openbroadcast.ch.supervised.conf
+++ b/conf/redis.openbroadcast.ch.supervised.conf
@@ -6,3 +6,6 @@ autostart=true
 autorestart=true
 redirect_stderr=True
 environment=HOME='/root/'
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=5
+stdout_logfile=/var/log/supervisord/redis.openbroadcast.ch
