--- a/conf/worker.import.openbroadcast.ch.supervised.conf
+++ b/conf/worker.import.openbroadcast.ch.supervised.conf
@@ -6,3 +6,6 @@ autostart=true
 autorestart=true
 redirect_stderr=True
 environment=HOME='/var/www/openbroadcast.ch/src/website/'
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=5
+stdout_logfile=/var/log/supervisord/worker.import.openbroadcast.ch
