--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -89,6 +89,7 @@ django-tagging==0.3.1
 
 # custom modules
 -e git+https://github.com/ohrstrom/django-pushy.git#egg=django-pushy
+-e git+https://github.com/ohrstrom/django-nunjucks.git#egg=django-nunjucks
 
 # api clients
 discogs-client==1.1.1
