--- a/conf/worker.celery.openbroadcast.ch.supervised.conf
+++ b/conf/worker.celery.openbroadcast.ch.supervised.conf
@@ -1,6 +1,6 @@
 [program:worker.celery.openbroadcast.ch]
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q celery
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q celery -l DEBUG
 user=root
 autostart=true
 autorestart=true
