--- a/conf/worker.import.openbroadcast.ch.supervised.conf
+++ b/conf/worker.import.openbroadcast.ch.supervised.conf
@@ -1,6 +1,6 @@
 [program:worker.import.openbroadcast.ch]
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 1 -Q import
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 1 -Q import -l DEBUG
 user=root
 autostart=true
 autorestart=true
