--- a/conf/openbroadcast.ch.gunicorn.conf
+++ b/conf/openbroadcast.ch.gunicorn.conf
@@ -1,10 +1,11 @@
 #gunicorn.conf, referenced from supervised.conf
+proc_name = "openbroadcast.ch"
 backlog = 2048
 bind = "0.0.0.0:8011"
 pidfile = "/tmp/openbroadcast.ch.pid"
 daemon = False
 debug = False
 # 1 worker needs approx. 40MB of ram
-workers = 4
+workers = 2
 logfile = "/var/log/supervisord/gunicorn.openbroadcast.log"
 loglevel = "info"
