--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -14,7 +14,6 @@ python-memcached>=1.48
 python-varnish>=0.2.1
 johnny-cache
 
-# 
 akismet
 redis
 
@@ -36,9 +35,6 @@ django-debug-toolbar>=0.8.4
 celery>=2.5.3,<3.0.0
 django-celery==2.5.5
 
-# api
-# django-tastypie==0.1.3
-django-tastypie-with-file-upload-and-model-form-validation
 
 # file handling
 django-private-files==0.1.2
@@ -77,49 +73,32 @@ django-activity-stream==0.4.4
 
 django-admin-tools
 
-# tagging - TODO: decide what app to use
-#django-taggit==0.9.3
+# tagging
 django-tagging==0.3.1
-#django-tagging-ng==0.3.3
 
--e git+https://github.com/rdegges/django-clear-cache.git#egg=clear_cache
+#-e git+git://github.com/mvpdev/django-eav.git#egg=django-eav
 
--e git+git://github.com/mvpdev/django-eav.git#egg=django-eav
-
-#-e git+https://github.com/bfirsh/python-echoprint.git#egg=echoprint
-
-# custom modules
--e git+https://github.com/ohrstrom/django-pushy.git#egg=django-pushy
--e git+https://github.com/ohrstrom/django-nunjucks.git#egg=django-nunjucks
+# custom modules [moved to repo]
+# -e git+https://github.com/ohrstrom/django-pushy.git#egg=django-pushy
+# -e git+https://github.com/ohrstrom/django-nunjucks.git#egg=django-nunjucks
 
 # api clients
 discogs-client==1.1.1
 
 django-floppyforms>=1.0
-
 django-autocomplete-light==1.1.31
-
 django-dajaxice
 django-dajax
-
 django-badbrowser
-
 django-email-obfuscator
-
 django-phonenumber-field
-
-
 django-modeltranslation==0.5
 
 URLObject
-
 django-countries==1.2
 
-# blog
--e git+git://github.com/newvem/pytz.git#egg=pytz
-# cmsplugin_zinnia
-# -e git+git://github.com/hzlf/django-blog-zinnia.git@v0.12.3#egg=django-zinnia
 
+-e git+git://github.com/newvem/pytz.git#egg=pytz
 
 # add-ons
 django-disqus==0.4.1
@@ -128,9 +107,6 @@ django-crispy-forms
 django-notification
 django-sendfile>=0.3.0
 # django-multilingual-ng>=0.1.21
-
-#-e git://github.com/ojii/django-multilingual-ng.git#egg=django-multilingual-ng
-#-e git+git://github.com/enginous/mutagen.git#egg=Mutagen
 
 # CMS related & plugins
 markdown
@@ -143,7 +119,6 @@ django-oauth2-provider==0.2.6
 # python libs
 PIL>=1.1.7
 #MySQL-python>=1.2.3
-#psycopg2==2.4.5
 South>=0.7.3
 BeautifulSoup>=3.2.0
 
@@ -168,13 +143,13 @@ scikits.audiolab>=0.11.0
 
 # repo installs
 -e git://github.com/snoball/facebook-python-sdk.git#egg=FacebookSDK
--e git://github.com/alex/django-filter.git#egg=django-filter
+#-e git://github.com/alex/django-filter.git#egg=django-filter
 
 -e git://github.com/toastdriven/django-haystack.git#egg=django-haystack
 pysolr
 
 
--e git+https://github.com/echonest/pyechonest.git#egg=pyechonest
+# -e git+https://github.com/echonest/pyechonest.git#egg=pyechonest # moved to repo
 
 
 # shop
