--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -91,7 +91,7 @@ django-dajaxice
 django-dajax
 django-badbrowser
 django-email-obfuscator
-django-phonenumber-field
+# django-phonenumber-field # moved to repo
 django-modeltranslation==0.5
 
 URLObject
