improved migration code

--- a/conf/openbroadcast.ch.nginx.conf
+++ b/conf/openbroadcast.ch.nginx.conf
@@ -38,8 +38,9 @@ server {
 
     location /static  {
         autoindex  off;
-        root /var/www/openbroadcast.ch/src/website/;
-		expires 30d;add_header Pragma public;
+        root /nas/storage/stage.openbroadcast.ch/;
+		expires 30d;
+		add_header Pragma public;
     	add_header Cache-Control "public";
     }
 
@@ -48,14 +49,21 @@ server {
     # make sure this corresponds with local_settings.py
     location /media/private {
         internal;
-        root /var/www/openbroadcast.ch/src/website/;
+        root /nas/storage/stage.openbroadcast.ch/;
     }
 
     location /media  {
         autoindex  off;
-        root /var/www/openbroadcast.ch/src/website/;
-		expires 30d;add_header Pragma public;
+        root /nas/storage/stage.openbroadcast.ch/;
+		expires 30d;
+		add_header Pragma public;
     	add_header Cache-Control "public";
+    }
+
+    location /doc  {
+        limit_req zone=daysy_static burst=120 nodelay;
+        autoindex  on;
+        root /nas/storage/stage.openbroadcast.ch/;
     }
 
     # path for static files
