--- a/conf/openbroadcast.ch.nginx.conf
+++ b/conf/openbroadcast.ch.nginx.conf
@@ -36,6 +36,10 @@ server {
     
     client_max_body_size 1024M;
 
+    # static error pages
+    error_page 500 /nas/storage/stage.openbroadcast.ch/static/error_pages/500.html;
+    error_page 502 503 /nas/storage/stage.openbroadcast.ch/static/error_pages/503.html;
+
     location /static  {
         autoindex  off;
         root /nas/storage/stage.openbroadcast.ch/;
