removed filer from release, artist & label

--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -129,7 +129,7 @@ python-openid>=2.2.5
 vobject>=0.8.1c
 chardet>=1.0.1
 textile
-easy-thumbnails==1.0-alpha-21
+easy-thumbnails==2.0.1
 python-magic
 pystache==0.3.1
 
