preparing prod-deployment

--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -42,8 +42,9 @@ django-celery==2.5.5
 django-private-files==0.1.2
 
 # core modules
-django==1.4.5
-django-cms==2.3
+#django==1.4.5
+django==1.4.13
+django-cms==2.3.8
 
 django-mptt==0.5.2
 django-sekizai>=0.6.1
