--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -9,7 +9,7 @@ South==0.8.4
 URLObject==2.3.4
 Unidecode==0.04.14
 Werkzeug==0.9.4
-akismet==0.2.0pil
+#akismet==0.2.0pil
 amqplib==1.0.2
 anyjson==0.3.3
 argparse==1.2.1
