--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -20,6 +20,7 @@ chardet==2.2.1
 cmsplugin-pagedown==0.0.2
 coverage==3.5.2
 discogs-client==1.1.1
+django-absolute
 django-activity-stream==0.4.4
 django-admin-shortcuts==1.2.5
 django-admin-tools==0.5.1
