--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -38,6 +38,7 @@ django-countries==1.2
 django-crispy-forms==1.4.0
 django-crypto==0.2.0
 django-csvimport==1.0
+python-Levenshtein==0.11.2
 django-dajax==0.9.2
 django-dajaxice==0.5.5
 django-debug-toolbar==1.0.1
