--- a/conf/services.openbroadcast.ch.supervised.conf
+++ b/conf/services.openbroadcast.ch.supervised.conf
@@ -6,7 +6,7 @@ priority=100
 [program:default]
 # default celery queue
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q celery -l DEBUG
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q celery -l INFO
 user=root
 autostart=true
 autorestart=true
@@ -21,7 +21,7 @@ stdout_logfile=/var/log/supervisor/service.default.openbroadcast.ch.log
 [program:process]
 # default processing queue
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q process -l DEBUG
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q process -l INFO
 user=root
 autostart=true
 autorestart=true
@@ -37,7 +37,7 @@ stdout_logfile=/var/log/supervisor/service.process.openbroadcast.ch.log
 [program:import]
 # importer process, needs to be _SINGLE_ instance!!
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 1 -Q import -l DEBUG
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 1 -Q import -l INFO
 user=root
 autostart=true
 autorestart=true
@@ -53,7 +53,7 @@ stdout_logfile=/var/log/supervisor/service.import.openbroadcast.ch.log
 [program:grapher]
 # waveform generation processes here
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q grapher -l DEBUG
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q grapher -l INFO
 user=root
 autostart=true
 autorestart=true
@@ -69,7 +69,7 @@ stdout_logfile=/var/log/supervisor/service.grapher.openbroadcast.ch.log
 [program:convert]
 # file conversion, can have long running tasks
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q convert -l DEBUG
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 4 -Q convert -l INFO
 user=root
 autostart=true
 autorestart=true
@@ -85,7 +85,7 @@ stdout_logfile=/var/log/supervisor/service.convert.openbroadcast.ch.log
 [program:complete]
 # api-completion queue - can grow large, processing not critical
 directory=/var/www/openbroadcast.ch/src/website/
-command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 8 -Q complete -l DEBUG
+command=/srv/openbroadcast.ch/bin/python /var/www/openbroadcast.ch/src/website/manage.py celeryd -c 8 -Q complete -l INFO
 user=root
 autostart=true
 autorestart=true
