--- a/website/requirements/requirements.txt
+++ b/website/requirements/requirements.txt
@@ -28,6 +28,7 @@ django-appconf==0.6
 django-autocomplete-light==1.1.31
 django-avatar==2.0
 django-badbrowser==1.0.7
+django-bleach==0.2.0
 django-braces==1.4.0
 django-cache-machine==0.6
 django-celery==2.5.5
